--- a/frontend/src/components/Register.css
+++ b/frontend/src/components/Register.css
@@ -7,7 +7,7 @@ input {
 	box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
 }
 
-button {
+/* button {
 	width: 150px;
 	padding: 10px;
 	font-size: 16px;
@@ -21,4 +21,4 @@ button {
 
 button:hover {
 	background-color: #45a049;
-}
+} */
