--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -17,10 +17,21 @@
 }
 
 @keyframes glow {
-  0% {
-    text-shadow: 0 0 5px #0000ff, 0 0 10px #0000ff, 0 0 20px #0000ff, 0 0 40px #0000ff, 0 0 80px #0000ff;
+	0% {
+	  text-shadow:
+		0 0 5px #ffe0b2,
+		0 0 10px #ffb74d,
+		0 0 20px #ff9800,
+		0 0 40px #f57c00,
+		0 0 80px #ef6c00;
+	}
+	100% {
+	  text-shadow:
+		0 0 5px #666,
+		0 0 10px #333,
+		0 0 20px #111,
+		0 0 40px #000,
+		0 0 80px #000;
+	}
   }
-  100% {
-    text-shadow: 0 0 5px #000000, 0 0 10px #000000, 0 0 20px #000000, 0 0 40px #000000, 0 0 80px #000000;
-  }
-}
+  
