--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -1,1 +1,9 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap');
 @import "tailwindcss";
+
+
+@theme {
+	/* --font-orbitron: 'Orbitron', 'sans-serif', */
+	--font-orbitron: 'Orbitron', 'sans-serif'
+}
