[ADD]: add cards for home page

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -1,6 +1,6 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap');
-@import "tailwindcss-animated";
+/* @import "tailwindcss-animated"; */
 @import "tailwindcss";
 
 
@@ -46,3 +46,16 @@
 	}
   }
   
+  @layer utilities {
+	.backface-hidden {
+	  backface-visibility: hidden;
+	}
+  
+	.transform-style-preserve-3d {
+	  transform-style: preserve-3d;
+	}
+  
+	.rotate-y-180 {
+	  transform: rotateY(180deg);
+	}
+  }
