[ADD]: add stats for dashbaords

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -82,4 +82,106 @@
 	}
   }
   
-  
+@layer utilities {
+  .bg-donut-0 { background-image: conic-gradient(#e17f17 0%, #374159 0% 100%); }
+  .bg-donut-1 { background-image: conic-gradient(#e17f17 1%, #374159 1% 100%); }
+  .bg-donut-2 { background-image: conic-gradient(#e17f17 2%, #374159 2% 100%); }
+  .bg-donut-3 { background-image: conic-gradient(#e17f17 3%, #374159 3% 100%); }
+  .bg-donut-4 { background-image: conic-gradient(#e17f17 4%, #374159 4% 100%); }
+  .bg-donut-5 { background-image: conic-gradient(#e17f17 5%, #374159 5% 100%); }
+  .bg-donut-6 { background-image: conic-gradient(#e17f17 6%, #374159 6% 100%); }
+  .bg-donut-7 { background-image: conic-gradient(#e17f17 7%, #374159 7% 100%); }
+  .bg-donut-8 { background-image: conic-gradient(#e17f17 8%, #374159 8% 100%); }
+  .bg-donut-9 { background-image: conic-gradient(#e17f17 9%, #374159 9% 100%); }
+  .bg-donut-10 { background-image: conic-gradient(#e17f17 10%, #374159 10% 100%); }
+  .bg-donut-11 { background-image: conic-gradient(#e17f17 11%, #374159 11% 100%); }
+  .bg-donut-12 { background-image: conic-gradient(#e17f17 12%, #374159 12% 100%); }
+  .bg-donut-13 { background-image: conic-gradient(#e17f17 13%, #374159 13% 100%); }
+  .bg-donut-14 { background-image: conic-gradient(#e17f17 14%, #374159 14% 100%); }
+  .bg-donut-15 { background-image: conic-gradient(#e17f17 15%, #374159 15% 100%); }
+  .bg-donut-16 { background-image: conic-gradient(#e17f17 16%, #374159 16% 100%); }
+  .bg-donut-17 { background-image: conic-gradient(#e17f17 17%, #374159 17% 100%); }
+  .bg-donut-18 { background-image: conic-gradient(#e17f17 18%, #374159 18% 100%); }
+  .bg-donut-19 { background-image: conic-gradient(#e17f17 19%, #374159 19% 100%); }
+  .bg-donut-20 { background-image: conic-gradient(#e17f17 20%, #374159 20% 100%); }
+  .bg-donut-21 { background-image: conic-gradient(#e17f17 21%, #374159 21% 100%); }
+  .bg-donut-22 { background-image: conic-gradient(#e17f17 22%, #374159 22% 100%); }
+  .bg-donut-23 { background-image: conic-gradient(#e17f17 23%, #374159 23% 100%); }
+  .bg-donut-24 { background-image: conic-gradient(#e17f17 24%, #374159 24% 100%); }
+  .bg-donut-25 { background-image: conic-gradient(#e17f17 25%, #374159 25% 100%); }
+  .bg-donut-26 { background-image: conic-gradient(#e17f17 26%, #374159 26% 100%); }
+  .bg-donut-27 { background-image: conic-gradient(#e17f17 27%, #374159 27% 100%); }
+  .bg-donut-28 { background-image: conic-gradient(#e17f17 28%, #374159 28% 100%); }
+  .bg-donut-29 { background-image: conic-gradient(#e17f17 29%, #374159 29% 100%); }
+  .bg-donut-30 { background-image: conic-gradient(#e17f17 30%, #374159 30% 100%); }
+  .bg-donut-31 { background-image: conic-gradient(#e17f17 31%, #374159 31% 100%); }
+  .bg-donut-32 { background-image: conic-gradient(#e17f17 32%, #374159 32% 100%); }
+  .bg-donut-33 { background-image: conic-gradient(#e17f17 33%, #374159 33% 100%); }
+  .bg-donut-34 { background-image: conic-gradient(#e17f17 34%, #374159 34% 100%); }
+  .bg-donut-35 { background-image: conic-gradient(#e17f17 35%, #374159 35% 100%); }
+  .bg-donut-36 { background-image: conic-gradient(#e17f17 36%, #374159 36% 100%); }
+  .bg-donut-37 { background-image: conic-gradient(#e17f17 37%, #374159 37% 100%); }
+  .bg-donut-38 { background-image: conic-gradient(#e17f17 38%, #374159 38% 100%); }
+  .bg-donut-39 { background-image: conic-gradient(#e17f17 39%, #374159 39% 100%); }
+  .bg-donut-40 { background-image: conic-gradient(#e17f17 40%, #374159 40% 100%); }
+  .bg-donut-41 { background-image: conic-gradient(#e17f17 41%, #374159 41% 100%); }
+  .bg-donut-42 { background-image: conic-gradient(#e17f17 42%, #374159 42% 100%); }
+  .bg-donut-43 { background-image: conic-gradient(#e17f17 43%, #374159 43% 100%); }
+  .bg-donut-44 { background-image: conic-gradient(#e17f17 44%, #374159 44% 100%); }
+  .bg-donut-45 { background-image: conic-gradient(#e17f17 45%, #374159 45% 100%); }
+  .bg-donut-46 { background-image: conic-gradient(#e17f17 46%, #374159 46% 100%); }
+  .bg-donut-47 { background-image: conic-gradient(#e17f17 47%, #374159 47% 100%); }
+  .bg-donut-48 { background-image: conic-gradient(#e17f17 48%, #374159 48% 100%); }
+  .bg-donut-49 { background-image: conic-gradient(#e17f17 49%, #374159 49% 100%); }
+  .bg-donut-50 { background-image: conic-gradient(#e17f17 50%, #374159 50% 100%); }
+  .bg-donut-51 { background-image: conic-gradient(#e17f17 51%, #374159 51% 100%); }
+  .bg-donut-52 { background-image: conic-gradient(#e17f17 52%, #374159 52% 100%); }
+  .bg-donut-53 { background-image: conic-gradient(#e17f17 53%, #374159 53% 100%); }
+  .bg-donut-54 { background-image: conic-gradient(#e17f17 54%, #374159 54% 100%); }
+  .bg-donut-55 { background-image: conic-gradient(#e17f17 55%, #374159 55% 100%); }
+  .bg-donut-56 { background-image: conic-gradient(#e17f17 56%, #374159 56% 100%); }
+  .bg-donut-57 { background-image: conic-gradient(#e17f17 57%, #374159 57% 100%); }
+  .bg-donut-58 { background-image: conic-gradient(#e17f17 58%, #374159 58% 100%); }
+  .bg-donut-59 { background-image: conic-gradient(#e17f17 59%, #374159 59% 100%); }
+  .bg-donut-60 { background-image: conic-gradient(#e17f17 60%, #374159 60% 100%); }
+  .bg-donut-61 { background-image: conic-gradient(#e17f17 61%, #374159 61% 100%); }
+  .bg-donut-62 { background-image: conic-gradient(#e17f17 62%, #374159 62% 100%); }
+  .bg-donut-63 { background-image: conic-gradient(#e17f17 63%, #374159 63% 100%); }
+  .bg-donut-64 { background-image: conic-gradient(#e17f17 64%, #374159 64% 100%); }
+  .bg-donut-65 { background-image: conic-gradient(#e17f17 65%, #374159 65% 100%); }
+  .bg-donut-66 { background-image: conic-gradient(#e17f17 66%, #374159 66% 100%); }
+  .bg-donut-67 { background-image: conic-gradient(#e17f17 67%, #374159 67% 100%); }
+  .bg-donut-68 { background-image: conic-gradient(#e17f17 68%, #374159 68% 100%); }
+  .bg-donut-69 { background-image: conic-gradient(#e17f17 69%, #374159 69% 100%); }
+  .bg-donut-70 { background-image: conic-gradient(#e17f17 70%, #374159 70% 100%); }
+  .bg-donut-71 { background-image: conic-gradient(#e17f17 71%, #374159 71% 100%); }
+  .bg-donut-72 { background-image: conic-gradient(#e17f17 72%, #374159 72% 100%); }
+  .bg-donut-73 { background-image: conic-gradient(#e17f17 73%, #374159 73% 100%); }
+  .bg-donut-74 { background-image: conic-gradient(#e17f17 74%, #374159 74% 100%); }
+  .bg-donut-75 { background-image: conic-gradient(#e17f17 75%, #374159 75% 100%); }
+  .bg-donut-76 { background-image: conic-gradient(#e17f17 76%, #374159 76% 100%); }
+  .bg-donut-77 { background-image: conic-gradient(#e17f17 77%, #374159 77% 100%); }
+  .bg-donut-78 { background-image: conic-gradient(#e17f17 78%, #374159 78% 100%); }
+  .bg-donut-79 { background-image: conic-gradient(#e17f17 79%, #374159 79% 100%); }
+  .bg-donut-80 { background-image: conic-gradient(#e17f17 80%, #374159 80% 100%); }
+  .bg-donut-81 { background-image: conic-gradient(#e17f17 81%, #374159 81% 100%); }
+  .bg-donut-82 { background-image: conic-gradient(#e17f17 82%, #374159 82% 100%); }
+  .bg-donut-83 { background-image: conic-gradient(#e17f17 83%, #374159 83% 100%); }
+  .bg-donut-84 { background-image: conic-gradient(#e17f17 84%, #374159 84% 100%); }
+  .bg-donut-85 { background-image: conic-gradient(#e17f17 85%, #374159 85% 100%); }
+  .bg-donut-86 { background-image: conic-gradient(#e17f17 86%, #374159 86% 100%); }
+  .bg-donut-87 { background-image: conic-gradient(#e17f17 87%, #374159 87% 100%); }
+  .bg-donut-88 { background-image: conic-gradient(#e17f17 88%, #374159 88% 100%); }
+  .bg-donut-89 { background-image: conic-gradient(#e17f17 89%, #374159 89% 100%); }
+  .bg-donut-90 { background-image: conic-gradient(#e17f17 90%, #374159 90% 100%); }
+  .bg-donut-91 { background-image: conic-gradient(#e17f17 91%, #374159 91% 100%); }
+  .bg-donut-92 { background-image: conic-gradient(#e17f17 92%, #374159 92% 100%); }
+  .bg-donut-93 { background-image: conic-gradient(#e17f17 93%, #374159 93% 100%); }
+  .bg-donut-94 { background-image: conic-gradient(#e17f17 94%, #374159 94% 100%); }
+  .bg-donut-95 { background-image: conic-gradient(#e17f17 95%, #374159 95% 100%); }
+  .bg-donut-96 { background-image: conic-gradient(#e17f17 96%, #374159 96% 100%); }
+  .bg-donut-97 { background-image: conic-gradient(#e17f17 97%, #374159 97% 100%); }
+  .bg-donut-98 { background-image: conic-gradient(#e17f17 98%, #374159 98% 100%); }
+  .bg-donut-99 { background-image: conic-gradient(#e17f17 99%, #374159 99% 100%); }
+  .bg-donut-100 { background-image: conic-gradient(#e17f17 100%, #374159 100% 100%); }
+}
